sna: Also check the bg rrop for reads when deciding upon fallback placement

Reported-and-tested-by: chr.ohm@gmx.net
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55810
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>